MET-1597 rearranged Gradle tasks